--- a/.gitignore
+++ b/.gitignore
@@ -331,3 +331,4 @@ ASALocalRun/
 
 # TwinCAT engineering
 .engineering_servers/
+.engineering_servers/TwinCAT HMI Project IMD/tchmi.project.Schema.json
